--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,30 @@
-<h1>Animated Tardis</h1>
+<h1>Animated Tardis <small>a single div</small></h1>
+
+
+
+
+<div id="tardis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<p class="copy">original with no animation from <a href="http://a.singlediv.com/">a Single Div</a></p>
 
 
 
